css/style.css
* {
    margin: 0;
    padding: 0;
    border: 0;
}

@font-face {
    font-family: 'New June';
    src: url('../assets/fonts/NewJune-Regular.otf');
}

body {
    font-family: 'New June';
    background: #fff;
}

h1 {font-size: 2.9em; line-height: 1.3em; font-weight: lighter;}
h2 {font-size: 2.0em; font-weight: lighter;}
h3 {font-size: 1.4em; font-weight: lighter;}

text--xlg {font-size: 2.8em;}
text--lg {font-size: 1.9em;}
text--md {font-size: 1.4em;}
text--sm {font-size: 1.2em;}
text--xsm {font-size: 0.9em;}

a {
    color: #000;
}

.bold {
    font-weight: bolder;
}

::-webkit-scrollbar {
    height: 0;
    width: 10px;
}

::-webkit-scrollbar-track {
  background: #ccc; 
}

::-webkit-scrollbar-thumb {
    background: #333; 
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background: #555;
}

/* HEADER */

.header {
    grid-area: header;
    padding: 20px 30px 10px 30px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header__logo {
    width: 80px;
}

.header__menu {
}

.header__list {
    display: flex;
}

.header__item {
    display: flex;
    align-items: center;
    height: 20px;
    padding: 0 10px;
}

.header__dot {
  width: 5px;
  height: 5px;
  background: #666;
  border-radius: 50%;
  margin: 0 10px 0 0;
}

.header__dot--active {
  background: #00ff5f;
}

.header__link {
    text-decoration: none;
}

.header__link--active {
    font-weight: bolder;
}

/* HEADER */

/* BUTTON */

.button {
    cursor: pointer;
    text-decoration: none;
    padding: 10px 20px;
    border-radius: 10px;
}

.button--lg {
    padding: 14px 38px;
    font-size: 16px;
}

.button--dark {
    background: #000;
    color: #fff;
}

.button--green {
    background: #01ff51;
    color: #333;
}

.button--grey {
    background: #d6d6d6;
    color: #333;
}

.button-group {
    display: flex;
}

.button-group .button:last-child {
    border-radius: 0 10px 10px 0;
}

.button-group .button:first-child {
    border-radius: 10px 0 0 10px;
}

/* BUTTON */

.section {
    background: #fff;
}

/* COVER */

.cover {
    grid-area: cover;
    padding: 0 0 40px 0;
}

.cover__container {
    padding: 0 35px;
}

.cover__image {
    margin: auto;
    width: 80%;
    height: 80vw;
    max-height: 90vh;
    max-width: 550px;
    background: url('../assets/images/cover-image.png');
    background-position: center;
    background-size: 100%;
    background-repeat: no-repeat;
}

.cover__body {
}

.cover__title {
    width: 86%;
    font-size: 2.8em;
}

.cover__text {
    width: 86%;
    margin: 15px 0;
    line-height: 1.4em;
    color: #333;
    font-size: 1.4em;
}

/* COVER */

.mimos {
    grid-area: mimos;
    background: #ededed;
    padding: 60px 0 40px 0;
}

.mimos__body {
}

.mimos__title {
    width: 70%;
    font-size: 2em;
    font-weight: bolder;
}

.mimos__text {
    margin: 15px 0;
    line-height: 1.2em;
    color: #333;
    font-size: 1.4em;
}

.mimos__text--sm {
    font-size: 1.2em;
}

.mimos__container {
    padding: 0 35px;
}

.pay-type {
    margin: 40px 0 0 0;
}

.pay-type__label {
    font-size: 0.9em;
}

.pay-type__item {
    font-size: 1.2em;
    font-weight: bolder;
}

.pay-type__button-group {
    margin: 5px 0;
}

/* SLIDE */

.slide {
    width: 98vw;
    margin: 30px auto 0 auto;
    display: flex;
    overflow-x: auto;
}

.slide__card {
    min-width: 130px;
    height: 110px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    text-decoration: none;
    opacity: 0.7;
}

.slide__icon--alimentacao {
    background: url('../assets/icons/food.svg');
    background-size: 50%;
}
.slide__icon--compras {
    background: url('../assets/icons/shop.svg');
    background-position: center;
    background-size: 80%;
    background-repeat: no-repeat;
}
.slide__icon--educacao {
    background: url('../assets/icons/college.svg');
    background-position: center;
    background-size: 80%;
    background-repeat: no-repeat;
}
.slide__icon--entretenimento {
    background: url('../assets/icons/entretenimento.svg');
    background-position: center;
    background-size: 50%;
    background-repeat: no-repeat;
}
.slide__icon--servicos {
    background: url('../assets/icons/services.svg');
    background-position: center;
    background-size: 70%;
    background-repeat: no-repeat;
}
.slide__icon--transporte {
    background: url('../assets/icons/transportation.svg');
    background-position: center;
    background-size: 80%;
    background-repeat: no-repeat;
}
.slide__icon--viagens {
    background: url('../assets/icons/travel.svg');
    background-position: center;
    background-size: 80%;
    background-repeat: no-repeat;
}

.slide__icon {
    width: 90px;
    height: 90px;
    background-position: center;
    background-repeat: no-repeat;
}

.slide__title {
    font-size: 1.1em;
}

.slide__card--active {
    opacity: 1;
}

.slide__card--active .slide__title {
    font-weight: bolder;
}

/* SLIDE */

.descontos {
    grid-area: descontos;
    background: #fff;
}

/*.descontos::before {
    content: "";
    position: absolute;
    z-index: 999;
    left: 60px;
    margin: -25px 0 0 0;
    border-bottom: 25px solid #fff; 
    border-left: 25px solid transparent; 
    border-right: 25px solid transparent; 
    height: 0; 
    width: 10px; 
    border-radius: 20px 20px 0 0;
}*/

.descontos__wave {
    position: absolute;
    width: 50px;
    left: 60px;
    margin: -15px 0 0 0;
    fill: #fff;
}

.descontos__container {
    padding: 40px 30px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.descontos__card {
    display: flex;
    width: 95%;
    align-items: center;
}

.descontos__image--ifood {
    background: url('../assets/icons/ifood.svg');
}

.descontos__image--mc {
    background: url('../assets/icons/mc.svg');
}

.descontos__image {
    width: 100px;
    height: 100px;
    margin: 0 20px 0 0;
    background-size: cover;
    background-position: center;
}

.descontos__body {
    display: flex;
    flex-direction: column;
}

.descontos__title {
    font-size: 22px;
    font-weight: bolder;
    display: flex;
}

.descontos__text {
    font-size: 18px;
    margin: 5px 0 0 0;
}

.descontos__line {
    width: 80%;
    height: 1px;
    background: #bbb;
    margin: 35px 0;
}

.vantagens {
}

.vantagens__container {
    padding: 60px 20px;
}

.vantagens__title {
    width: 95%;
    margin: auto;
    text-align: center;
    font-weight: bolder;
    font-size: 1.9em;
}

.vantagens__carrossel {
    margin: 60px 0 0 0;
    padding: 0 20px;
}

.vantagens__item {
    width: 100%;
}

.vantagens__top {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.vantagens__icon {
    width: 25px;
    height: 20px;
}

.vantagens__icon--left {
    background: url('../assets/icons/left.svg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

.vantagens__icon--right {
    background: url('../assets/icons/right.svg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

.vantagens__logo {
    width: 180px;
    height: 180px;
    background: url('../assets/icons/uber.svg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 50%;
    margin: 0 0 20px 0;
}

.vantagens__logo::before {
    content: "R$ 20 off";
    position: absolute;
    background: #02ff5f;
    margin: -8px 0 0 100px;
    font-size: 20px;
    font-weight: bolder;
    padding: 5px 15px;
    border-radius: 40px;
}

.vantagens__body {
    text-align: center;
}

.vantagens__text{
    padding: 15px 0;
    font-size: 1.4em;
}

.vantagens__price {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 10px 0 0 0;
    font-size: 1.9em;
}

.vantagens__value {
    font-size: 2.8em;
}

.vantagens__obs {
    font-size: 1.9em;
}

.vantagens__navigation {
    padding: 20px 0;
    width: 20%;
    margin: 40px auto 0 auto;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.vantagens__circle {
    width: 7px;
    height: 7px;
    border-radius: 50%;
    background: #ccc;
}

.vantagens__circle--active {
    width: 10px;
    height: 10px;
    background: #333;
}

.hand {
    
}

.hand__container {
    padding: 20px 20px 0 20px;
}

.hand__text {
    width: 90%;
    margin: 0 auto 50px auto;
    text-align: center;
    font-size: 1.1em;
    color: #aaa;
}

.hand__image {
    width: 40%;
    height: 365px;
    margin: 0 auto;
    background: url('../assets/images/card-hand.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.desktop-only {
    display: none;
}
.mobile-only {
    display: initial;
}

/* TABLET */
@media (min-width: 768px) and (max-width: 1281px) {
    #global {
        display: grid;
        grid-template-areas: 
            "header header"
            "cover cover"
            "mimos mimos"
            "descontos descontos";
    }
    
    .cover {
        display: flex;
        flex-direction: column-reverse;
        justify-content: space-around;
        align-items: center;
        padding: 40px 0;
        padding-bottom: 0;
    }
    
    .cover__image {
        margin: 0;
        height: 535px;
        width: 620px;
    }
    
    .cover__body {
        text-align: center;
        padding: 10px 0 40px 0;
    }
    
    .cover__title {
        margin: 0 auto;
        width: 90%;
    }
    
    .cover__text {
        margin: 10px auto 0 auto;
        width: 60%;
    }
    
    .mimos {
        
    }
    
    .mimos__body {
        text-align: center;
    }
    
    .mimos__title {
        margin: auto;
    }
    
    .pay-type {
        text-align: center;
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    
    .slide {
        width: 98vw;
        overflow-x: scroll;
        padding: 0;
        margin-left: auto;
        margin-right: auto;
    }
    .descontos {
        display: flex;
        justify-content: center;
    }
    .descontos__container {
        width: 80%;
        flex-direction: row;
    }
    .descontos__card {
        flex-direction: column;
        text-align: center;
    }
    .descontos__image {
        margin: 0 0 20px 0;
    }
    
    .desktop-only {
        display: none;
    }
    .mobile-only {
        display: none;
    }
}

/* DESKTOP */
@media (min-width: 1281px) {
    #global {
        display: grid;
        grid-template-areas: 
            "header header"
            "cover cover"
            "mimos descontos";
    }
    
    .cover {
        display: flex;
        flex-direction: row-reverse;
        justify-content: space-around;
        align-items: center;
        padding: 40px 90px 0 90px;
        padding-bottom: 0;
    }
    
    .cover__image {
        margin: 0;
        height: 530px;
        width: 680px;
    }
    
    .cover__container {
        padding: 0;
        width: 30%;
    }
    
    .cover__body {
        
    }
    
    .cover__title {
        
    }
    
    .cover__text {
        width: 70%;
    }
    
    .mimos {
        width: calc(50vw - 120px);
        padding-left: 120px;
    }
    
    .mimos__body {
        width: 70%;
    }
    
    .slide {
        width: 100%;
        flex-wrap: wrap;
        overflow-x: hidden;
    }
    .slide__card {
        margin-bottom: 40px;
    }
    .descontos {
        width: 50vw;
        display: flex;
        justify-content: center;
    }
    .descontos__container {
        width: 80%;
        flex-direction: row;
    }
    .descontos__card {
        flex-direction: column;
        text-align: center;
    }
    .descontos__image {
        margin: 0 0 20px 0;
    }
    
    .desktop-only {
        display: flex;
    }
    .mobile-only {
        display: none;
    }
    .desktop-ex {
        display: none;
    }
}

